Added bespoke logo to theme admin and homepage

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -122,7 +122,7 @@
 
   <div id="bespoke-logo">
 
-    <img src="{{ 'klurskin-stamp.png' | asset_url }}" alt="{{ shop.name | escape }}" />
+    <img src="{{ 'home_custom_logo.png' | asset_url }}" alt="{{ shop.name | escape }}" />
 
   </div>
 
